Спринт 11 - тема 2/5: Обработка запросов и формирование ответов - урок 3/8 Параметры строки запроса